--- a/package.json
+++ b/package.json
@@ -2,14 +2,23 @@
   "name": "wetube",
   "version": "1.0.0",
   "description": "Cloning Youtube with VanillaJS and NodeJS",
-  "main": "index.js",
-  "dependencies": {
-    "express": "^4.17.1"
-  },
-  "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "author": "eunhee ju(charmjeh@gmail.com)",
+  "main": "index.js",
+  "scripts": {
+    "start": "nodemon --exec babel-node index.js"
+  },
+  "dependencies": {
+    "@babel/core": "^7.7.0",
+    "@babel/node": "^7.7.0",
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.4",
+    "express": "^4.17.1",
+    "helmet": "^3.21.2",
+    "morgan": "^1.9.1"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.7.1",
+    "nodemon": "^1.19.4"
+  },
   "license": "ISC"
 }
