--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "eunhee ju(charmjeh@gmail.com)",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --exec babel-node index.js"
+    "start": "nodemon --exec babel-node init.js --delay 2"
   },
   "dependencies": {
     "@babel/core": "^7.7.0",
