--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "eunhee ju(charmjeh@gmail.com)",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --exec babel-node init.js"
+    "start": "nodemon --exec babel-node init.js --delay 2s"
   },
   "dependencies": {
     "@babel/core": "^7.7.0",
@@ -14,7 +14,8 @@
     "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
     "helmet": "^3.21.2",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "pug": "^2.0.4"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.7.1",
