--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@babel/node": "^7.7.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "helmet": "^3.21.2",
     "morgan": "^1.9.1",
