--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "helmet": "^3.21.2",
     "mongoose": "^5.7.11",
     "morgan": "^1.9.1",
+    "multer": "^1.4.2",
     "pug": "^2.0.4"
   },
   "devDependencies": {
