--- a/package.json
+++ b/package.json
@@ -5,24 +5,39 @@
   "author": "eunhee ju(charmjeh@gmail.com)",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --exec babel-node init.js --delay 2s"
+    "dev:server": "nodemon --exec babel-node init.js --delay 2s",
+    "dev:assets": "cross-env WEBPACK_ENV=development webpack -w",
+    "build:assets": "cross-env WEBPACK_ENV=production webpack"
   },
   "dependencies": {
     "@babel/core": "^7.7.0",
     "@babel/node": "^7.7.0",
+    "@babel/polyfill": "^7.7.0",
+    "autoprefixer": "^9.7.3",
+    "babel-loader": "^8.0.6",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
+    "cross-env": "^6.0.3",
+    "css-loader": "^3.2.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "helmet": "^3.21.2",
     "mongoose": "^5.7.11",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
-    "pug": "^2.0.4"
+    "node-sass": "^4.13.0",
+    "postcss-loader": "^3.0.0",
+    "pug": "^2.0.4",
+    "sass-loader": "^8.0.0",
+    "scss-loader": "0.0.1",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.7.1",
+    "eslint": "^6.6.0",
     "nodemon": "^1.19.4"
   },
   "license": "ISC"
