--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "eunhee ju(charmjeh@gmail.com)",
   "main": "index.js",
   "scripts": {
-    "dev:server": "nodemon --exec babel-node init.js --delay 2s",
+    "dev:server": "nodemon --exec babel-node init.js --delay 2s --ignore 'scss'",
     "dev:assets": "cross-env WEBPACK_ENV=development webpack -w",
     "build:assets": "cross-env WEBPACK_ENV=production webpack"
   },
