--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/polyfill": "^7.12.1",
     "autoprefixer": "^9.8.6",
     "body-parser": "^1.19.0",
+    "connect-mongo": "^3.2.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "cross-env": "^6.0.3",
