--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "author": "eunhee ju(charmjeh@gmail.com)",
   "main": "index.js",
   "scripts": {
-    "dev:server": "nodemon --exec babel-node init.js --delay 2s --ignore 'scss'",
+    "dev:server": "nodemon --exec babel-node init.js --delay 2 --ignore '.scss' --ignore 'static' ",
     "dev:assets": "cross-env WEBPACK_ENV=development webpack -w",
-    "build:assets": "cross-env WEBPACK_ENV=production webpack"
+    "build:assets": "cross-env WEBPACK_ENV=production webpack",
+    "tunnel": "lt --port 4000"
   },
   "dependencies": {
     "@babel/core": "^7.12.3",
@@ -30,6 +31,7 @@
     "multer": "^1.4.2",
     "node-sass": "^4.14.1",
     "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
     "passport-github": "^1.1.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1",
