feat: make mute and fullscreen button work

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "eunhee ju(charmjeh@gmail.com)",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --exec babel-node init.js --delay 2 --ignore '.scss' --ignore 'static' ",
+    "dev:server": "nodemon --exec babel-node init.js --delay 2 --ignore '.scss' --ignore 'static' ",
     "dev:assets": "cross-env WEBPACK_ENV=development webpack -w",
     "build:assets": "cross-env WEBPACK_ENV=production webpack",
     "tunnel": "lt --port 4000"
@@ -15,6 +15,7 @@
     "@babel/node": "^7.12.6",
     "@babel/polyfill": "^7.12.1",
     "autoprefixer": "^9.8.6",
+    "babel-loader": "^8.2.1",
     "body-parser": "^1.19.0",
     "connect-mongo": "^3.2.0",
     "cookie-parser": "^1.4.5",
