--- a/package.json
+++ b/package.json
@@ -36,10 +36,12 @@
     "passport-github": "^1.1.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1",
+    "path": "^0.12.7",
     "postcss-loader": "^3.0.0",
     "pug": "^2.0.4",
     "sass-loader": "^8.0.2",
     "scss-loader": "0.0.1",
+    "serve-favicon": "^2.5.0",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12"
   },
