--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/node": "^7.12.6",
     "@babel/polyfill": "^7.12.1",
     "autoprefixer": "^9.8.6",
+    "axios": "^0.21.0",
     "babel-loader": "^8.2.1",
     "body-parser": "^1.19.0",
     "connect-mongo": "^3.2.0",
