--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "passport-local-mongoose": "^6.0.1",
     "path": "^0.12.7",
     "postcss-loader": "^3.0.0",
-    "pug": "^2.0.4",
+    "pug": ">=3.0.1",
     "sass-loader": "^8.0.2",
     "scss-loader": "0.0.1",
     "serve-favicon": "^2.5.0",
